<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>me.asu</groupId>
    <artifactId>asu-socket-server</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <properties>
        <!-- MAVEN 配置 -->
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
        <maven.test.skip>false</maven.test.skip>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <lombok.version>1.16.20</lombok.version>
        <slf4j.version>1.7.25</slf4j.version>
        <junit.version>4.13.1</junit.version>
    </properties>
    <dependencies>
        <dependency>
            <groupId>me.asu</groupId>
            <artifactId>asu-toolkit</artifactId>
            <version>1.0.0-SNAPSHOT</version>
        </dependency>

        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>${slf4j.version}</version>
        </dependency>
        <!-- 
            using jdk logger for test
            init logger in main
            String path = ExampleMain.class.getClassLoader()
                                     .getResource("jul-log.properties")
                                     .getFile();
            System.setProperty("java.util.logging.config.file", path);
            LogManager.getLogManager().readConfiguration();
            or
            InputStream inputStream = LoggerProperties.class.getClassLoader().getResourceAsStream("jul-log.properties");
            if (inputStream != null) {
                LogManager.getLogManager().readConfiguration(inputStream);
                LogManager.getLogManager().addLogger(logger);  // add Logger for defined in YourMainClass
            }
            or java -Djava.util.logging.appCfg.file=abc.properties YourMainClass
         -->
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-jdk14</artifactId>
            <version>${slf4j.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>
    <build>
        <plugins>
            <!-- lombok -->
            <plugin>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok-maven-plugin</artifactId>
                <version>1.16.10.0</version>
                <configuration>
                    <encoding>utf-8</encoding>
                </configuration>
                <executions>
                    <execution>
                        <phase>generate-sources</phase>
                        <goals>
                            <goal>delombok</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <!-- compiler -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.5.1</version>
                <configuration>
                    <fork>true</fork>
                    <source>${maven.compiler.source}</source>
                    <target>${maven.compiler.target}</target>
                    <encoding>${project.build.sourceEncoding}</encoding>
                    <compilerArgs>
                        <!--<arg>-XX:MaxPermSize=512M</arg>-->
                        <arg>-verbose</arg>
                        <!--<arg>-Xlint:unchecked</arg>-->
                        <!--<arg>-Xlint:deprecation</arg>-->
                        <!--<arg>-bootclasspath</arg>-->
                        <!--<arg>${env.JAVA_HOME}/jre/lib/rt.jar</arg>-->
                        <!--<arg>-extdirs</arg>-->
                        <!--<arg>${project.basedir}/src/main/webapp/WEB-INF/lib</arg>-->
                    </compilerArgs>
                </configuration>
            </plugin>
            <!-- jar -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>2.6</version>
                <configuration>
                    <archive>
                        <manifest>
                            <addDefaultImplementationEntries>false</addDefaultImplementationEntries>
                            <addDefaultSpecificationEntries>false</addDefaultSpecificationEntries>
                            <addClasspath>true</addClasspath>
                            <classpathPrefix>lib/</classpathPrefix>
                            <!--<mainClass>com.xxg.Main</mainClass>-->
                        </manifest>
                        <manifestEntries>
                            <Specification-Title>${project.artifactId}</Specification-Title>
                            <Specification-Version>${project.version}</Specification-Version>
                            <Implementation-Title>${project.name}</Implementation-Title>
                            <Implementation-Version>${project.version}</Implementation-Version>
                            <Built-By>Base Platform Team</Built-By>
                        </manifestEntries>
                    </archive>
                    <!-- 由具体的项目自己指定 -->
                    <!--<excludes>-->
                    <!--<exclude>**/*.properties</exclude>-->
                    <!--<exclude>**/*.xml</exclude>-->
                    <!--<exclude>**/*.json</exclude>-->
                    <!--<exclude>**/*.groovy</exclude>-->
                    <!--<exclude>**/*.py</exclude>-->
                    <!--<exclude>**/*.jar</exclude>-->
                    <!--</excludes>-->
                </configuration>
            </plugin>
            <!-- source -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.0.0</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <phase>install</phase>
                        <goals>
                            <goal>jar-no-fork</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <!-- javadoc -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>2.10.3</version>
                <configuration>
                    <!-- 配置无效，配置全局环境变量
                    JAVA_TOOL_OPTIONS =  -Dfile.encoding=UTF-8
                    -->
                    <charset>UTF-8</charset>
                    <encoding>UTF-8</encoding>
                    <show>private</show>
                    <nohelp>true</nohelp>
                    <aggregate>true</aggregate>
                    <additionalparam>-Xdoclint:none</additionalparam>
                    <tags>
                        <tag>
                            <name>date</name>
                            <placement>a</placement>
                            <head>创建日期</head>
                        </tag>
                        <tag>
                            <name>copyright</name>
                            <placement>a</placement>
                            <head>版权:</head>
                        </tag>
                    </tags>
                </configuration>
                <executions>
                    <execution>
                        <id>attach-javadocs</id>
                        <phase>install</phase>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <!-- surefire -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.17</version>
                <configuration>
                    <skip>${maven.test.skip}</skip>
                </configuration>
            </plugin>
            <!--            <plugin>-->
            <!--                <groupId>org.apache.maven.plugins</groupId>-->
            <!--                <artifactId>maven-assembly-plugin</artifactId>-->
            <!--                <configuration>-->
            <!--                    <archive>-->
            <!--                        <manifest>-->
            <!--                            <mainClass></mainClass>-->
            <!--                        </manifest>-->
            <!--                    </archive>-->
            <!--                    <descriptorRefs>-->
            <!--                        <descriptorRef>jar-with-dependencies</descriptorRef>-->
            <!--                    </descriptorRefs>-->
            <!--                </configuration>-->
            <!--                <executions>-->
            <!--                    <execution>-->
            <!--                        <id>make-assembly</id>-->
            <!--                        <phase>package</phase>-->
            <!--                        <goals>-->
            <!--                            <goal>single</goal>-->
            <!--                        </goals>-->
            <!--                    </execution>-->
            <!--                </executions>-->
            <!--            </plugin>-->

            <!--                <plugin>-->
            <!--                    <groupId>org.apache.maven.plugins</groupId>-->
            <!--                    <artifactId>maven-shade-plugin</artifactId>-->
            <!--                    <executions>-->
            <!--                        <execution>-->
            <!--                            <phase>package</phase>-->
            <!--                            <goals>-->
            <!--                                <goal>shade</goal>-->
            <!--                            </goals>-->
            <!--                            <configuration>-->
            <!--                                <transformers>-->
            <!--                                    <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">-->
            <!--                                        <mainClass>com.xxg.Main</mainClass>-->
            <!--                                    </transformer>-->
            <!--                                    <transformer implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">-->
            <!--                                        <resource>META-INF/spring.handlers</resource>-->
            <!--                                    </transformer>-->
            <!--                                    <transformer implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">-->
            <!--                                        <resource>META-INF/spring.schemas</resource>-->
            <!--                                    </transformer>-->
            <!--                                </transformers>-->
            <!--                            </configuration>-->
            <!--                        </execution>-->
            <!--                    </executions>-->
            <!--                </plugin>-->

        </plugins>
    </build>

</project>